vlib/v/checker/tests/assign_array_init_to_fixed_array_var.out
vlib/v/checker/tests/assign_array_init_to_fixed_array_var.vv:2:5: error: cannot assign to `a`: expected `[3]int`, not `[]int`
    1 | mut a := [1, 2, 10]!
    2 | a = [1, 2, 3]
      |     ~~~~~~~~~
    3 | dump(a)
Details: try `a = [1, 2, 3]!` instead (with `!` after the array literal)
